--- a/tests/acceptance/docs/utils/template-local-toolium.cfg
+++ b/tests/acceptance/docs/utils/template-local-toolium.cfg
@@ -1,41 +1,97 @@
-[Jira]
-enabled: false
-reportAfter: scenario
-token:
-# query: 
-
 [Driver]
+# Valid driver types: firefox, chrome, iexplore, edge, safari, opera, phantomjs, ios, android
 type: chrome
+headless: false
+# Configure local driver paths but now it is not necessary download the drivers if you use the toolium-telefonica-7.0.0 version or higher
 chrome_driver_path: /usr/local/share/chromedriver
-headless: true
+gecko_driver_path: /usr/local/share/geckodriver
+
+# Browser size and bounds
+window_width: 1920
+window_height: 1080
+
+stb_window_width: 1920
+stb_window_height: 1080
+
+mh_window_width: 1280
+mh_window_height: 800
+
+implicitly_wait: 15
+explicitly_wait: 15
+
+[Chrome]
+options : {'excludeSwitches': [ 'enable-automation' ], 'args': [ '--disable-web-security', '--allow-running-insecure-content']}
 
 [ChromeArguments]
-# mute-audio: false
+disable-web-security: true
+load-extension: resources/extensions/Living_App_Video_Playback/2.6.2_0
+allow-running-insecure-content: true
+no-sandbox: true
+ignore-certificate-errors: true
+autoplay-policy: no-user-gesture-required
+
+[Capabilities]
+goog___loggingPrefs : {'performance':'ALL', 'browser':'ALL', 'driver': 'ALL'}
+selenoid___options: {"enableVideo": False, "enableVNC": True, "enableLog": True, "name": "LA_COMMONS",
+                    "labels": {"username": "LA_QA_Team", "environment": "qa", "build_number": "1"},
+                    "fullscreen": True, "sessionTimeout": "10m", "version": "112.0"}
 
 [TestExecution]
 environment: es-dev
 language: es-es
-auto_retry: true
-mock_mode: local
-env_file_path: .env.local
-user_test: user_telco_name
-# la_version: 3.25.0-yanguas
+# environment: br-qa
+# language: pt-br
+mobile_emulation: false
+device_orientation: normal
+mobile_resolution: 1920x1080
+# Download files automatically
+download_directory: [RANDOM]
+allure: false
+# Set to true to refresh locale files
+user_test: user-radio-0
+matricula: TO_BE_DEFINED
+autoretry: false
+mock_mode: docker
+# La Version for RC, for example: 3.33.0-ucles. By default: latest
+la_version: latest
+# Pull request number for the current execution, ex: 17. if pr_number is not defined, la_version will be used
 pr_number:
+# The URL of the demo to test. If demo_url is defined, pr_number and la_version will be ignored.
 demo_url:
+
+[VisualTests]
+baseline_name: radio
+save: false
+enabled: true
+fail: true
+complete_report: true
+last_retry_seconds: 10
 
 [Server]
 enabled: true
-host: localhost
+host: 127.0.0.1
 port: 4444
+base_path: /wd/hub
+# User and password for basic authentication
+username: test_tef
+password: qa-grid-ggr
+# Video and logs
+video_enabled: false
+logs_enabled: true
 
-[VisualTests]
-save: false
+[PageObjectsAutoloader]
+enabled: true
+definition_files_path: resources/page_objects_definition
+
+[Jira]
+enabled: false
+reportAfter: scenario
+notify_errors: false
+token: TO_BE_DEFINED
 
 [JiraExecution]
-version: v3.26_Zorita
-Build: Release
-labels: ft,regression
+version: TO_BE_DEFINED
+Build: rc1
 Language: es
-
-[BrowserMobProxy]
-enabled: false
+# Language: pt
+labels: ft,regression,final
