--- a/tests/acceptance/settings/toolium.cfg
+++ b/tests/acceptance/settings/toolium.cfg
@@ -2,9 +2,11 @@
 # Valid driver types: firefox, chrome, iexplore, edge, safari, opera, phantomjs, ios, android
 type : chrome
 headless : true
-# chrome_driver_path: /usr/local/share/chromedriver
-# Use this path for docker execution
-chrome_driver_path: chromedriver
+
+# Configure local driver paths but now it is not necessary download the drivers if you use the toolium-telefonica-7.0.0 version or higher
+chrome_driver_path: /usr/local/share/chromedriver
+gecko_driver_path: /usr/local/share/geckodriver
+
 dark_mode: false
 implicitly_wait : 15
 explicitly_wait : 25
@@ -12,27 +14,8 @@ explicitly_wait : 25
 window_width: 1920
 window_height: 1080
 
-[TestExecution]
-# Download files automatically
-environment: es-dev
-language: es-es
-download_directory: [RANDOM]
-allure: true
-auto_retry: false
-save_html: true
-matricula: IDXXXXX
-# Living App Mock Mode
-living_app_mock: true
-living_app_ignore_contents_lab: false
-mock_mode: docker
-# Env file path
-env_file_path: .env
-user_test: la_ci_user_0
-enable_mobile_emulation: true
-# La Version for RC, for example: 3.3.0-darnius. By default: latest
-la_version: latest
-pr_number:
-demo_url:
+[Chrome]
+options : {'excludeSwitches': [ 'enable-automation' ], 'args': [ '--disable-web-security', '--allow-running-insecure-content']}
 
 [ChromeArguments]
 disable-web-security : true
@@ -47,44 +30,9 @@ mute-audio: false
 [Capabilities]
 browserVersion: 128.0
 pageLoadStrategy: normal
-selenoid___options: {'name': 'LA_CORE', 'labels': {'username': 'LA-QA', 'environment': 'qa', 'build_number': '1'}, 
-    'enableVideo': False, 'enableVNC': True, 'enableLog': True, 'sessionTimeout': '6m', "version": "128.0"}
 goog___loggingPrefs: {'performance': 'ALL', 'browser': 'ALL', 'driver': 'ALL'}
-
-[VisualTests]
-baseline_name : ci
-enabled: true
-fail: true
-save: false
-complete_report: true
-engine: pil
-
-[Server]
-port: 4444
-base_path: /wd/hub
-# User and password for basic authentication
-username: test_tef
-password: qa-grid-ggr
-# Video and logs
-video_enabled: false
-logs_enabled: true
-enabled : true
-host : selenoid
-
-[PageObjectsAutoloader]
-enabled: true
-# File path can be a .yaml file or directory containing some page object definition files.
-definition_files_path: resources/page_objects_definition
-
-[Jira]
-enabled: false
-reportAfter: feature
-token:
-
-[JiraExecution]
-version: CI
-Build: Release
-labels: ft
+selenoid___options: {'name': 'LA_CORE', 'labels': {'username': 'LA-QA', 'environment': 'qa', 'build_number': '1'}, 
+                    'enableVideo': False, 'enableVNC': True, 'enableLog': True, 'sessionTimeout': '6m', "version": "128.0"}
 
 [BrowserMobProxy]
 enabled: false
@@ -94,3 +42,64 @@ save_har: true
 har_capture_headers: true
 har_capture_content: true
 har_capture_binary: false
+
+[TestExecution]
+# Download files automatically
+environment: es-dev
+language: es-es
+download_directory: [RANDOM]
+allure: true
+auto_retry: false
+save_html: true
+matricula: TO_BE_DEFINED
+# Living App Mock Mode
+living_app_mock: true
+living_app_ignore_contents_lab: false
+mock_mode: docker
+# Env file path
+env_file_path: .env
+user_test: TO_BE_DEFINED
+enable_mobile_emulation: true
+# La Version for RC, for example: 3.33.0-ucles. By default: latest
+la_version: latest
+# Pull request number for the current execution, ex: 17. if pr_number is not defined, la_version will be used
+pr_number:
+# The URL of the demo to test. If demo_url is defined, pr_number and la_version will be ignored.
+demo_url:
+
+[VisualTests]
+baseline_name : TO_BE_DEFINED
+enabled: true
+fail: true
+save: false
+complete_report: true
+engine: pil
+last_retry_seconds: 10
+
+[Server]
+enabled : true
+host : selenoid
+port: 4444
+base_path: /wd/hub
+# User and password for basic authentication
+username: test_tef
+password: qa-grid-ggr
+# Video and logs
+video_enabled: false
+logs_enabled: true
+
+[PageObjectsAutoloader]
+enabled: true
+# File path can be a .yaml file or directory containing some page object definition files.
+definition_files_path: resources/page_objects_definition
+
+[Jira]
+enabled: false
+reportAfter: feature
+token: TO_BE_DEFINED
+
+[JiraExecution]
+version: CI
+Build: Release
+Language: es
+labels: ft
