fix: update password placeholder in configuration files

--- a/tests/acceptance/settings/toolium.cfg
+++ b/tests/acceptance/settings/toolium.cfg
@@ -83,7 +83,7 @@ port: 4444
 base_path: /wd/hub
 # User and password for basic authentication
 username: test_tef
-password: qa-grid-ggr
+password: TO_BE_DEFINED
 # Video and logs
 video_enabled: false
 logs_enabled: true
